DDI-Lifecycle/3.2/model/_sources/composite-types/LocationValueType/index.rst.txt
LocationValueType
-----------------

A location of the specified geographic level providing information on its name, identification codes, temporal and spatial coverage as expressed by bounding and excluding polygon descriptions or references.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "LocationValueName",":doc:`/composite-types/NameType/index`","0..n","A name for the Location. May be expressed in multiple languages. Repeat the element to express names with different content, for example different names for different systems."
   "GeographicLocationIdentifier",":doc:`/composite-types/GeographicLocationIdentifierType/index`","0..n","A unique identifier for the geographic location. Repeat for multiple identifiers from other authorized sources."
   "DefiningCharacteristic",":doc:`/composite-types/DefiningCharacteristicType/index`","0..n","Use to attach one or more characteristics which define the area. These are often useful in terms of selection. For example a U.S. Block may be classified as Urban, Rural, or Mixed. The defining characteristic supports the use of a controlled vocabulary and may provide a time period for which the characteristic is valid."
   "GeographicTime",":doc:`/composite-types/DateType/index`","0..1","The time period for which the description (names and codes) are valid. Use a date range when start and end periods are known (or the location description is still valid). If the range is unknown indicate a single date for which you know the description is valid. This will allow others to relate it to a fuller date range if external information become available."
   "GeographicBoundary",":doc:`/composite-types/GeographicBoundaryType/index`","0..n","A choice of a BoundingBox and/or a set of BoundingPolygons and ExcludingPolygons that describe an area for a specific time period. Repeat the GeographicBoundary for changes in the geographic footprint of the LocationValue or when providing references to BoundingPolygons from different sources."
   "SupersedesLocationValue",":doc:`/composite-types/LocationValueType/index`","0..n","Provides a reference to the LocationValue or Values that the current LocationValue supersedes partially or fully. For example, if the LocationValue was the State of North Dakota as defined in 1890 it would supersede the LocationValue for Dakota Territory (1861-1889) as a description of ""part"" of that Territory."
   "PrecedesLocationValue",":doc:`/composite-types/LocationValueType/index`","0..n","Provides a reference to the LocationValue or Values that the current LocationValue immediately precedes partially or fully. For example, if the LocationValue was the Dakota Territory (1861-1889) preceded the State of North Dakota and the State of South Dakota as defined in 1890. The Dakota Territory provided ""part"" of its area in the creation of each new LocationValue."

Properties Inherited from IdentifiableType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "InheritanceAction","string","0..1","The attribute ""action"" is used for inheritance situations where there is an override at the local level (within a grouped StudyUnit) which is not available for further inheritance. There are three possible values for ""action"": Add - A new identifiable object (an Identifiable, Versionable, or Maintainable element) is provided locally with a new identifier (one that is not inherited). All properties (elements and attributes contained in the object) of the object are as specified. If an object with an existing id is created, this is an error.; Update - An object is provided locally with the SAME id as the inherited object. For each type of property that is specified locally, a full set of those properties is specified for local use. These properties replace any properties of this type which were inherited. Unspecified properties are used as inherited.; Delete - An object is provided locally with the SAME id as the inherited object. All properties specified locally in this object will be deleted if their types and values match those inherited. Note that to completely delete an object at the local level, all properties of the inherited object must be listed."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/IdentifiableType/index`
    * **LocationValueType**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/GeographicLocation/index`
* :doc:`/composite-types/ComponentPartsType/index`
* :doc:`/composite-types/GeographicCoverageType/index`
* :doc:`/composite-types/IncludedGeographicLocationCodesType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/LocationValueType.svg

