DDI-Lifecycle/3.3/model/_sources/composite-types/LocationValueType/index.rst.txt
LocationValueType
-----------------

A location of the specified geographic level providing information on its name, identification codes, temporal and spatial coverage as expressed by bounding and excluding polygon descriptions or references.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "LocationValueName",":doc:`/composite-types/NameType/index`","0..n","A name for the Location. May be expressed in multiple languages. Repeat the element to express names with different content, for example different names for different systems."
   "GeographicLocationIdentifier",":doc:`/composite-types/GeographicLocationIdentifierType/index`","0..n","A unique identifier for the geographic location. Repeat for multiple identifiers from other authorized sources."
   "DefiningCharacteristic",":doc:`/composite-types/DefiningCharacteristicType/index`","0..n","Use to attach one or more characteristics which define the area. These are often useful in terms of selection. For example a U.S. Block may be classified as Urban, Rural, or Mixed. The defining characteristic supports the use of a controlled vocabulary and may provide a time period for which the characteristic is valid."
   "ComponentParts",":doc:`/composite-types/LocationValueBundleType/index`","0..n","A stack of LocationValueReferences to each of the locations of the specified PrimaryComponentLevel type that make up the Component Area. Includes a GeographicTime to allow for repetition for change over time. Repeat this object for different GeographicTime."
   "ImmediateParentLocation",":doc:`/composite-types/LocationValueBundleType/index`","0..n","Provides a reference to a location or locations that define the immediate parent of described LocationValue within the specified Geographic Structure Hierarchy as well as the GeographicTime of the relationship. Contains multiple LocationValueReferences for layered hierarchies, providing a pointer to the immediate parent in each hierarchy in the layers. Example 1 - Single Hierarchy: Country-State, where the ImmediateParentLocationValue of the State would reference the Country LocationValue. Example 2 - Layered Hierarchy: Country-State-County-Place-Tract (portion) (the portion of a Tract within a Place) Hierarchy 1: Country-State-County-Tract, ImmediateParentLocationValue County; Hierarchy 2: Country-State-Place-Tract (portion) ImmediateParentLocationValue Place. Repeat object to provide information on change in ImmediateParent over time."
   "GeographicTime",":doc:`/composite-types/DateType/index`","0..1","The time period for which the description (names and codes) are valid. Use a date range when start and end periods are known (or the location description is still valid). If the range is unknown indicate a single date for which you know the description is valid. This will allow others to relate it to a fuller date range if external information become available."
   "GeographicBoundary",":doc:`/composite-types/GeographicBoundaryType/index`","0..n","A choice of a BoundingBox and/or a set of BoundingPolygons and ExcludingPolygons that describe an area for a specific time period. Repeat the GeographicBoundary for changes in the geographic footprint of the LocationValue or when providing references to BoundingPolygons from different sources."
   "SupersedesLocationValue",":doc:`/composite-types/LocationValueType/index`","0..n","Provides a reference to the LocationValue or Values that the current LocationValue supersedes partially or fully. For example, if the LocationValue was the State of North Dakota as defined in 1890 it would supersede the LocationValue for Dakota Territory (1861-1889) as a description of ""part"" of that Territory."
   "PrecedesLocationValue",":doc:`/composite-types/LocationValueType/index`","0..n","Provides a reference to the LocationValue or Values that the current LocationValue immediately precedes partially or fully. For example, if the LocationValue was the Dakota Territory (1861-1889) preceded the State of North Dakota and the State of South Dakota as defined in 1890. The Dakota Territory provided ""part"" of its area in the creation of each new LocationValue."

Properties Inherited from IdentifiableType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/IdentifiableType/index`
    * **LocationValueType**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/GeographicLocation/index`
* :doc:`/item-types/Universe/index`
* :doc:`/composite-types/GeographicCoverageType/index`
* :doc:`/composite-types/IncludedGeographicLocationCodesType/index`
* :doc:`/composite-types/LocationValueBundleType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/LocationValueType.svg

